Attempt spacing fix for masthead link

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -14,6 +14,7 @@
 
 .pinkLineBottom {
   margin-top: 3rem;
+  margin-bottom: 5rem;
 }
 
 .pinkLineBottom:after {
